deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-static
spec:
  template:
    metadata:
      labels:
        app: nginx-static
    spec:
      volumes:
        - name: nginx-static-storage
          persistentVolumeClaim:
            claimName: nginx-pvc
      containers:
        - image: docker.io/snimmagadda/nginx-pvc-example:latest
          name: nginx-pvc-example
          ports:
            - containerPort: 8081
              name: serve
          volumeMounts:
            - name:  nginx-static-storage
              mountPath: /var/www/static
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-static-svc
spec:
  type: ClusterIP
  ports:
    - port: 8081
  selector:
    app: nginx-static
