route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-hello-world
spec:
  sampleapplication-karthick5268a-dev.apps.sandbox-m2.ll9k.p1.openshiftapps.com/
  port:
    targetPort: nginx
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: nginx-hello-world
    weight: 100
  wildcardPolicy: None
